# sharepoint-excel-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: authentication_troubleshooting.md
examples/: settings_examples.py
scripts/: install_macos.sh  install_windows.bat  run_macos.sh  run_windows.bat
src/sharepoint_excel_manager/: excel_manager.py  gui.py  main.py  settings.py  sharepoint_client.py
tests/: test_settings.py  test_sharepoint_client.py
