[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharepoint-excel-manager"
version = "1.0.0"
description = "A GUI application for managing Excel files in SharePoint"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
dependencies = [
    "toga>=0.4.0",
    "openpyxl>=3.1.0",
    "pandas==2.3.2",
    "requests>=2.31.0",
    "msal>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
sharepoint-excel-manager = "sharepoint_excel_manager.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true